crates/compiler/src/tests/e2e/good/0573_shadow_builtin_ref_get/main.gom
fn ref_get(x: int32) -> int32 {
    x + 1
}

fn main() {
    println(ref_get(41).to_string())
}
