crates/compiler/src/tests/e2e/bad/0577_extern_type_requires_go_binding/main.gom
extern type Duration

fn main() -> unit {
    ()
}
